--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y \
           libsdl2-dev \
+          libsdl2-2.0-0 \
           cmake \
           build-essential \
           xvfb \
@@ -241,7 +242,7 @@ jobs:
     - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y xvfb x11-utils
+        sudo apt-get install -y xvfb x11-utils libsdl2-2.0-0
     
     - name: Run extended integration tests
       env:
@@ -299,7 +300,7 @@ jobs:
   release-artifacts:
     runs-on: ubuntu-latest
     needs: [build-and-test, build-windows]
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: always() && github.event_name == 'push' && github.ref == 'refs/heads/main' && needs.build-and-test.result == 'success'
     
     steps:
     - name: Download Linux build
@@ -309,6 +310,7 @@ jobs:
         path: artifacts/linux/
     
     - name: Download Windows build
+      if: needs.build-windows.result == 'success'
       uses: actions/download-artifact@v4
       with:
         name: automation-server-windows
@@ -321,10 +323,15 @@ jobs:
         tar -czf ../lvgl-ui-automation-linux-x64.tar.gz *
         cd ../..
         
-        # Package Windows build
-        cd artifacts/windows
-        zip -r ../lvgl-ui-automation-windows-x64.zip *
-        cd ../..
+        # Package Windows build if available
+        if [ -d "artifacts/windows" ]; then
+          cd artifacts/windows
+          zip -r ../lvgl-ui-automation-windows-x64.zip *
+          cd ../..
+          echo "Windows package created"
+        else
+          echo "Windows build not available, skipping Windows package"
+        fi
     
     - name: Upload release artifacts
       uses: actions/upload-artifact@v4
@@ -334,6 +341,7 @@ jobs:
         retention-days: 30
     
     - name: Upload Windows release artifacts
+      if: needs.build-windows.result == 'success'
       uses: actions/upload-artifact@v4
       with:
         name: release-packages-windows
